charon/tests/ui/unsupported/string-literal.rs
//@ known-failure
static FOO: &str = "hello";
